tests/errors/ichar_arg_len_compiletime.f90
program main
   print *, ichar("Hello")
end program